# COSMIC-ccsnlab

./: .gitignore  README.md  pyproject.toml
scripts/: process_all_raw.py  rerun_klencki.py
setup_scripts/: combiner.py  init_pops.py  run_gen_pop.py
src/ccsnlab/: __init__.py  sn_types.py
src/ccsnlab/cee_rerun/: Klencki_lambda.py  __init__.py  merger_criteria_functions.py  rerun_detailed.py
src/ccsnlab/data_loading/: __init__.py  delayed_fryer.py  process_raw.py  rerun_binary.py
src/ccsnlab/plotting/: __init__.py  dtds.py  loss_data.csv  masses.py  ratios.py  subtypes.py  z_8.69_data.csv  z_9.05_data.csv
